--- a/src/App.css
+++ b/src/App.css
@@ -39,12 +39,13 @@
 
 /* Full screen map */
 #map {
+  width: 100%;
   height: 100vh;
 }
 /*Makes the sample page fill the window.
 * https://developers.google.com/maps/documentation/javascript/tutorial */
-html, body {
+/* html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-}
+} */
