--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,17 @@
-.App {
-  text-align: center;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
-
+*:focus {
+  outline: red solid 3px;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 5vmin;
-
-  position: absolute;
-      top: 1%;  /* position the top  edge of the element at the middle of the parent */
-      left: 50%; /* position the left edge of the element at the middle of the parent */
-
+  height: 10vmin;
+  padding-top: 10px;
 
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,16 +20,26 @@
     transform: rotate(360deg);
   }
 }
+.the-header {
+  display:flex;
+  justify-content: center;
 
-/* Full screen map */
-#map {
-  width: 100%;
-  height: 100vh;
+  background-color: #ff844f;
+  height: 70px;
 }
-/*Makes the sample page fill the window.
-* https://developers.google.com/maps/documentation/javascript/tutorial */
-/* html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-} */
+
+h1 {
+  margin: 10px;
+}
+h2 {
+  font-size: 1.7em;
+}
+.name-list:hover {
+    color: #ff844f;
+    cursor: pointer;
+    background-color: black;
+}
+.name-list:active {
+  color: red;
+  font-weight: bold;
+}
