--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,9 @@ h1 {
 h2 {
   font-size: 1.7em;
 }
+.name-list {
+      box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+}
 .name-list:hover {
     color: #ff844f;
     cursor: pointer;
