--- a/src/App.css
+++ b/src/App.css
@@ -66,5 +66,17 @@ h2 {
   padding: 10px;
   font: inherit;
   cursor: pointer;
-  font-size:13px;
+
+}
+
+@media screen and (max-width: 450px){
+  .li-button {
+    font-size:13px;
+  }
+}
+
+@media screen and (max-width: 600px){
+  .filterPlaceholderText {
+    width: 90%;
+  }
 }
